apps/dummy-car/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-car
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dummy-car
  template:
    metadata:
      labels:
        app: dummy-car
    spec:
      containers:
      - name: dummy-car
        image: ghcr.io/tbhuvaneswar/dummy-car:latest
        ports:
        - containerPort: 8080
