apps/dummy-car/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-car
spec:
  selector:
    app: dummy-car
  ports:
  - port: 80
    targetPort: 8080
